Add SpotBugs and Error Prone to Maven build (#4499)
Co-authored-by: wholton <3317595+wholton@users.noreply.github.com>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>